fix text maxi list gap

--- a/src/blocks/text-maxi/style.scss
+++ b/src/blocks/text-maxi/style.scss
@@ -19,10 +19,11 @@ body.maxi-blocks--active .maxi-text-block {
 
 				&::before {
 					content: '';
-					display: inline;
-					position: static;
+					position: relative;
+					display: inline-block;
 					line-height: 0.5;
 					vertical-align: middle;
+					word-wrap: normal;
 				}
 
 				&::marker {
